<resources>
    <string name="app_name">Dungeon Hunter</string>

    <string name="attack">Attack</string>
    <string name="abilities">Abilities</string>
    <string name="items">Items</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hero_select">Hero Select</string>
    <string name="slot">No Hero</string>
    <string name="new_hero">New Hero</string>
    <string name="confirm">Confirm</string>
    <string name="heroName">Hero Name</string>
    <string name="no_user">No active user</string>
    <string name="level">Level: %1$d</string>
    <string name="exp_value">%1$s/%2$s</string>
    <string name="lp_stat">LP: %1$s / %2$s</string>
    <string name="mp_stat">MP: %1$s / %2$s</string>
    <string name="str_stat">Strength: %1$s</string>
    <string name="intel_stat">Intelligence: %1$s</string>
    <string name="def_stat">Defense: %1$s</string>
    <string name="ag_stat">Agility: %1$s</string>
    <string name="lck_stat">Luck: %1$s</string>
    <string name="status">Status</string>
    <string name="hero_img_desc">An image of the hero</string>
    <string name="returning">Return</string>
    <string name="inventory">Bag</string>
    <string name="hero_inventory">%1$s\'s inventory</string>
    <string name="sign_out">Sign Out</string>
    <string name="enemies_rec">Enemies Record</string>
    <string name="settings">Settings</string>
    <string name="close_btn_desc">Button to close current screen</string>
    <string name="enemy_info">%1$s\nType: %2$s\nTimes Defeated: %3$d</string>
    <string name="floor_stage_run">Run: %1$d Floor: %2$d Stage: %3$d</string>
    <string name="st_music">Music: </string>
    <string name="sound_effects">Effects: </string>
    <string name="delete_hero">Delete Hero</string>
    <string name="zerozero">00</string>
    <string name="hero_status">LP: %1$d/%2$d  MP: %3$d/%4$d</string>
    <string name="abilities_actives">Actives</string>
    <string name="abilities_passives" >Passives</string>
    <string name="floor_stage_run_hsel">Progress:\t\t\tR: %1$d  F: %2$d  S: %3$d</string>
    <string name="no_hero">No hero</string>
    <string name="close">Close</string>
    <string name="use">Use</string>
    <string name="ib_log">ImageButton to show Log content</string>
    <string name="enemy_img_desc">Image of the enemy</string>
    <string name="status_img_desc">Button to open status Fragment</string>
    <string name="bag_btn_desc">Button to open inventory Fragment</string>
    <string name="enemies_btn_desc">Button to open enemies record Fragment</string>
    <string name="settings_btn_desc">Button to open Settings Fragment</string>
    <string name="advance">Advance</string>
    <string name="start">Start</string>
</resources>
