<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/btn01big"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="15dp">

    <LinearLayout
        android:id="@+id/llHeroView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:visibility="gone">

        <TextView
            android:id="@+id/tvListHeroName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="8"
            android:gravity="center_vertical"
            android:text="@string/delete_hero"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/tvListHeroLvl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:text="@string/level" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvListProgress"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center"
        android:text="@string/floor_stage_run_hsel"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tvNoHero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:foregroundGravity="center"
        android:gravity="center"
        android:text="@string/no_hero"
        android:textSize="24sp" />
</LinearLayout>